--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,1 @@
-{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"qr-project-830d9","configurations":{"web":"1:312076674810:web:2f4454544fa46cfcd48b43"}}}}}}
+{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"qr-project-7f885","configurations":{"web":"1:664669335812:web:9c7637db5735b8814d2051"}}}}}}
