--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_email_sender: ^5.0.2
   cloud_firestore: ^5.4.4
+  country_code_picker: ^3.0.0
+  country_picker: ^2.0.26
 
 dev_dependencies:
   flutter_test:
