image problem solved

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,26 @@
-{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"qr-project-7f885","configurations":{"web":"1:664669335812:web:9c7637db5735b8814d2051"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "qr-project-7f885",
+          "configurations": {
+            "web": "1:664669335812:web:9c7637db5735b8814d2051"
+          }
+        }
+      }
+    }
+  },
+  "emulators": {
+    "firestore": {
+      "port": 8080
+    },
+    "storage": {
+      "port": 9199
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
+  }
+}
