--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.6.0
+  firebase_core: ^3.8.0
   firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
   flutter_email_sender: ^5.0.2
@@ -45,6 +45,13 @@ dependencies:
   country_code_picker: ^3.0.0
   country_picker: ^2.0.26
   shared_preferences: ^2.3.2
+  file_picker: ^8.1.3
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.6
+  mime: ^2.0.0
+  universal_html: ^2.2.4
+  http: ^1.2.2
+
 
 dev_dependencies:
   flutter_test:
